# YrinVM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  start_debug_session.cmd
assembler/: helloworld.json
examples/: 00_hello_world.yrin  00_helloworld.yrin  assembler.py  helloworld.json  yvm_01b1.json
include/: yrin_code_metadata.hpp  yrin_datatypes.hpp  yrin_defs.hpp  yrin_error.hpp  yrin_stack.hpp  yrin_vm.hpp  yvm.hpp
include/console/: yrin_win_console.hpp
include/core/: yrin_code_metadata.hpp  yrin_vm.hpp
include/network/: yrin_net_client.hpp
server/: main_client.cpp  main_server.cpp  yrin_server.cpp  yrin_server.hpp
src/: bytecode.hpp  common.hpp  executor.cpp  executor.hpp  loader.cpp  loader.hpp  main.cpp  operations.cpp  operations.hpp  yrin_loader.cpp  yrin_operations.cpp  yrin_stack.cpp  yrin_vm.cpp  yvm.hpp  yvmexception.hpp
src/common/: yrin_code_metadata.hpp  yrin_error.hpp
src/loader/: yrin_loader.cpp
src/runtime/: yrin_datatypes.hpp  yrin_operations.cpp  yrin_stack.cpp  yrin_stack.hpp  yrin_vm.cpp  yrin_vm.hpp
tests/: main_tests.cpp  run_tests.cpp  test_generator.py  tests.cpp  tests.hpp  tests.json
tools/debug_client/: main_client.cpp  yrin_client.cpp  yrin_client.hpp
tools/debug_client/src/: yrin_client.cpp  yrin_client.hpp  yrin_console_draw.hpp
tools/debug_server/: main_server.cpp  yrin_server.cpp  yrin_server.hpp
tools/network/: yrin_net_client.cpp
